# PrecastTracker.WebApi/swagger.json
@@ -282,10 +282,244 @@
           }
         }
       }
+    },
+    "/api/tester-report/test-set-day/{testSetDayId}": {
+      "get": {
+        "tags": [
+          "TesterReport"
+        ],
+        "parameters": [
+          {
+            "name": "testSetDayId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetTestSetDayDetailsResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetTestSetDayDetailsResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetTestSetDayDetailsResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/tester-report/test-set-day": {
+      "post": {
+        "tags": [
+          "TesterReport"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SaveTestSetDayDataRequest"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SaveTestSetDayDataRequest"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/SaveTestSetDayDataRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "GetTestSetDayDetailsResponse": {
+        "type": "object",
+        "properties": {
+          "testSetDayId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "dayNum": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "comments": {
+            "type": "string",
+            "nullable": true
+          },
+          "dateDue": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "dateTested": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "jobCode": {
+            "type": "string",
+            "nullable": true
+          },
+          "jobName": {
+            "type": "string",
+            "nullable": true
+          },
+          "mixDesignCode": {
+            "type": "string",
+            "nullable": true
+          },
+          "requiredPsi": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "pieceType": {
+            "type": "string",
+            "nullable": true
+          },
+          "castDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "castTime": {
+            "type": "string",
+            "format": "date-span",
+            "nullable": true
+          },
+          "testCylinders": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TestCylinderBreakDto"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "ProblemDetails": {
         "type": "object",
         "properties": {
@@ -312,6 +546,64 @@
           }
         },
         "additionalProperties": { }
+      },
+      "SaveTestSetDayDataRequest": {
+        "type": "object",
+        "properties": {
+          "testSetDayId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "dateTested": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "comments": {
+            "type": "string",
+            "nullable": true
+          },
+          "cylinderBreaks": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TestCylinderBreakInput"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "TestCylinderBreakDto": {
+        "type": "object",
+        "properties": {
+          "testCylinderId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "code": {
+            "type": "string",
+            "nullable": true
+          },
+          "breakPsi": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "TestCylinderBreakInput": {
+        "type": "object",
+        "properties": {
+          "testCylinderId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "breakPsi": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
       },
       "TestCylinderQueueResponse": {
         "type": "object",
@@ -358,6 +650,10 @@
             "nullable": true
           },
           "testSetId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "testSetDayId": {
             "type": "integer",
             "format": "int32"
           },
